
bin_PROGRAMS = motrix
motrix_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/external/rapidjson/include
motrix_SOURCES = \
		external/rapidjson/include/rapidjson/allocators.h \
		external/rapidjson/include/rapidjson/encodedstream.h \
		external/rapidjson/include/rapidjson/encodings.h \
			external/rapidjson/include/rapidjson/error/en.h \
			external/rapidjson/include/rapidjson/error/error.h \
                external/rapidjson/include/rapidjson/fwd.h \
			external/rapidjson/include/rapidjson/internal/biginteger.h \
			external/rapidjson/include/rapidjson/internal/clzll.h \
			external/rapidjson/include/rapidjson/internal/diyfp.h \
			external/rapidjson/include/rapidjson/internal/dtoa.h \
			external/rapidjson/include/rapidjson/internal/ieee754.h \
			external/rapidjson/include/rapidjson/internal/itoa.h \
			external/rapidjson/include/rapidjson/internal/meta.h \
			external/rapidjson/include/rapidjson/internal/pow10.h \
			external/rapidjson/include/rapidjson/internal/regex.h \
			external/rapidjson/include/rapidjson/internal/stack.h \
			external/rapidjson/include/rapidjson/internal/strfunc.h \
			external/rapidjson/include/rapidjson/internal/strtod.h \
			external/rapidjson/include/rapidjson/internal/swap.h \
		external/rapidjson/include/rapidjson/memorystream.h \
		external/rapidjson/include/rapidjson/pointer.h \
		external/rapidjson/include/rapidjson/rapidjson.h \
		external/rapidjson/include/rapidjson/reader.h \
		external/rapidjson/include/rapidjson/stream.h \
		external/rapidjson/include/rapidjson/stringbuffer.h \
		external/rapidjson/include/rapidjson/writer.h \
		external/rapidjson/license.txt \
	src/ascii_table.hpp \
	src/byte_slice.cpp \
	src/byte_slice.hpp \
	src/byte_stream.cpp \
	src/byte_stream.hpp \
		src/display/colors.cpp \
		src/display/colors.hpp \
		src/display/exit.hpp \
		src/display/falling_text.cpp \
		src/display/falling_text.hpp \
		src/display/loading_messages.hpp \
		src/display/string.hpp \
		src/display/sync_meter.cpp \
		src/display/sync_meter.hpp \
		src/display/system_warning.cpp \
		src/display/system_warning.hpp \
		src/display/window.cpp \
		src/display/window.hpp \
	src/engine.cpp \
	src/engine.hpp \
	src/error.cpp \
	src/error.hpp \
	src/expect.cpp \
	src/expect.hpp \
	src/hex.cpp \
	src/hex.hpp \
	src/main.cpp \
	src/method.cpp \
	src/method.hpp \
	src/monero_data.cpp \
	src/monero_data.hpp \
	src/pub.cpp \
	src/pub.hpp \
		src/rpc/json.hpp \
	src/span.hpp \
	src/wire.hpp \
		src/wire/error.cpp \
		src/wire/error.hpp \
		src/wire/field.hpp \
		src/wire/fwd.hpp \
		src/wire/json.hpp \
			src/wire/json/base.hpp \
			src/wire/json/error.cpp \
			src/wire/json/error.hpp \
			src/wire/json/fwd.hpp \
			src/wire/json/read.cpp \
			src/wire/json/read.hpp \
			src/wire/json/write.cpp \
			src/wire/json/write.hpp \
		src/wire/traits.hpp \
		src/wire/vector.hpp \
	src/zmq.cpp \
	src/zmq.hpp
